--- a/app/manifest.json
+++ b/app/manifest.json
@@ -16,8 +16,7 @@
   },
   "permissions": [
     "tabs",
-    "http://*/*",
-    "https://*/*"
+    "storage"
   ],
   "options_ui": {
     "page": "options.html",
@@ -25,15 +24,9 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "scripts/contentscript.js"
-      ],
-      "run_at": "document_end",
-      "all_frames": false
+      "js": [ "scripts/youtube.js" ],
+      "matches": [ "*://*.youtube.com/*" ],
+      "run_at": "document_start"
     }
   ],
   "browser_action": {
